--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     font-family: 'digital';
     src: url(fonts/digital.ttf);
 }
+
 @font-face {
     font-family: 'flip';
     src: url(fonts/FLIPclockblack.ttf);
@@ -27,26 +28,15 @@ body {
     width: 200px;
     transition: all 0.2s ease;
     border: solid black 4px;
-}
-
-#launch:disabled {
-    filter: drop-shadow(0px 0px 0px black) brightness(0.5);
-}
-
-#launch:disabled:active {
-    filter: drop-shadow(0px 0px 0px black) brightness(0.5);
-}
-
-#launch.launch-enabled {
     filter: drop-shadow(0px 10px 0px black);
     transform: translateX(-50%) translateY(-50%) translateY(-10px);
 }
 
-#launch:active {
-    transition: none;
-    filter: drop-shadow(0px 0px 0px black);
+#launch:disabled {
+    filter: drop-shadow(0px 0px 0px black) brightness(0.5);
     transform: translateX(-50%) translateY(-50%);
 }
+
 
 #timers {
     position: absolute;
@@ -133,6 +123,7 @@ body {
 }
 
 #positions {
+    z-index: 1;
     align-content: center;
     text-align: center;
     position: absolute;
@@ -152,5 +143,34 @@ body {
 }
 
 #positions.enabled {
-    transform: translateY(-50%) translateX(0);
+    transform: translateY(-50%) translateX(-10%);
+    filter: drop-shadow(0 10px 10px black);
+}
+
+#start {
+    position: absolute;
+    top: 50vh;
+    left: 15vw;
+    transform: translateY(-50%);
+    font-size: 50px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 10px;
+    border: 4px solid black;
+    border-radius: 5px;
+    transition: all 0.2s ease;
+    background-color: yellow;
+    filter: drop-shadow(0px 10px 0px black);
+}
+
+#start:disabled {
+    transform: translateY(-50%) translateY(10px);
+    filter: drop-shadow(0px 0px 0px black);
+}
+
+#key {
+    position: absolute;
+    top: 15vh;
+    left: 16vw;
+    height: 150px;
+    transform-origin: 50% 45%;
 }
