--- a/index.css
+++ b/index.css
@@ -8,9 +8,14 @@
     src: url(fonts/FLIPclockblack.ttf);
 }
 
+@font-face {
+    font-family: 'gondens';
+    src: url(fonts/Gondens.otf);
+}
+
 body {
     background-color: #c6c6c6;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 #launch {
@@ -49,6 +54,15 @@ body {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     transition: all 1s cubic-bezier(0.00, 0.2, 0.2, 1);
+}
+
+#eta {
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+
+    span {
+        font-family: 'digital';
+    }
 }
 
 #timers.down {
@@ -123,15 +137,20 @@ body {
 }
 
 #positions {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 0fr repeat(3, 1fr);
+    padding-right: 20px;
     z-index: 1;
     align-content: center;
-    text-align: center;
+    text-align: right;
+    gap: 0 20px;
     position: absolute;
-    background-color: rgb(255, 241, 179);
+    background-color: rgb(164, 164, 164);
     font-family: 'flip';
-    font-size: clamp(1rem, 70px, 5rem);
-    width: 20vw;
-    height: 80vh;
+    font-size: 55px;
+    width: 35vw;
+    height: 60vh;
     top: 50vh;
     left: 0;
     transform: translateY(-50%) translateX(-100%);
@@ -140,11 +159,24 @@ body {
     border-top-right-radius: 20px;
     border: 4px solid black;
     border-left: 0;
+    padding-left: 5%;
 }
 
 #positions.enabled {
     transform: translateY(-50%) translateX(-10%);
     filter: drop-shadow(0 10px 10px black);
+}
+
+#positions .top {
+    align-self: end;
+    justify-self: center;
+}
+
+.engrave {
+    font-family: 'gondens';
+    font-size: 35px;
+    align-self: center;
+    color:rgb(0, 0, 0)
 }
 
 #start {
@@ -159,6 +191,7 @@ body {
     border-radius: 5px;
     transition: all 0.2s ease;
     background-color: yellow;
+    color: black;
     filter: drop-shadow(0px 10px 0px black);
 }
 
